--- a/.github/workflows/dComain.yml
+++ b/.github/workflows/dComain.yml
@@ -1,13 +1,23 @@
 name: docs
 
-on: [push]
-
+on:
+  push:
+    branches: 
+      - main
 jobs:
-  bump:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: tool3/docsify-action@master
-      with:
-        github_token: ${{ secrets.GP_TOKEN }}
-        branch: gh-pages
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@v2.1.2
+      - name: setup node
+        with:
+          node-version: 12.x
+      - name: build
+        run: npx docsify-cli build
+      - name: deploy
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          ACCESS_TOKEN: ${{secrets.GP_TOKEN}}
+          BRANCH: gh-pages
+          FOLDER: docs
