--- a/.github/workflows/dComain.yml
+++ b/.github/workflows/dComain.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: actions/setup-node@v2.1.2
       - name: setup node
+        uses: actions/setup-node@v2.1.2
         with:
           node-version: 12.x
       - name: build
